--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-expand-lg  navbar-secondary bg-primary py-1 fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/Pages/images/logo.png" alt="logo" style="height:90px">
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-5 ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="A.D.CARED-PORTFOLIO/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="/A.D.CARED-PORTFOLIO/Pages/about.html">About</a>
@@ -87,7 +87,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/Pages/images/careddd.jpg" alt="Image">
+                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/images/careddd.jpg" alt="Image">
             </div>
         </div>
     </section>
