--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-                <img src="/Pages/images/logo.png" alt="logo" style="height:90px">
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,7 +68,7 @@
                     <div class="card w-75 bg-dark text-light mt-5">
                         <div class="card-body text-center">
                             <div>
-                                <img src="/Pages/images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
+                                <img src="/images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
                                 <div class="card-body bg-dark">
                                     <h5 class="card-title"><span class="text-primary">School
                                             Website</span></h5>
@@ -93,7 +93,7 @@
                 <div class="col-md">
                     <div class="card w-75 bg-dark text-light mt-5 h-60">
                         <div class="card-body bg-dark text-center">
-                            <img src="/Pages/images/nexcld.jpg" class="card-img-top w-75" alt="image">
+                            <img src="/images/nexcld.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">Nexcloud
                                         Website</span></h5>
@@ -114,7 +114,7 @@
                        <div class="col-md">
                     <div class="card w-75 bg-dark text-light mt-5 h-60">
                         <div class="card-body bg-dark text-center">
-                            <img src="/Pages/images/portfolio.jpg" class="card-img-top w-75" alt="image">
+                            <img src="/images/portfolio.jpg" class="card-img-top w-75" alt="image">
                             <div class="card-body">
                                 <h5 class="card-title"><span class="text-primary">My
                                         Portfolio</span></h5>
