--- a/pages/about.html
+++ b/pages/about.html
@@ -38,15 +38,15 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/Pages/projects.html">Projects</a>
                     </li>
 
                     <li>
-                        <a class="nav-link text-white" href="/resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/Pages/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item"> 
-                        <a class="nav-link text-white" href="/contact.html">Contact</a>
+                        <a class="nav-link text-white" href="/Pages/contact.html">Contact</a>
                     </li>
 
 
