--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,8 @@
     <!-- Bootsrap CSS  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
 
 </head>
 
@@ -20,7 +21,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-         <img src="/images/logo.png" alt="logo" style="height:90px">
+                <img src="/images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -38,19 +39,16 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/Pages/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
 
                     <li>
-                        <a class="nav-link text-white" href="/Pages/Resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/Resume.html">Resume</a>
                     </li>
 
-                    <li class="nav-item"> 
-                        <a class="nav-link text-white" href="/Pages/contact.html">Contact</a>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/contact.html">Contact Me</a>
                     </li>
-
-
-
                 </ul>
 
             </div>
@@ -58,37 +56,51 @@
     </nav>
 
 
-    <section class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-2 text-sm-start p-lg-0 pt-5 vh-100">
-        <div class="-md-7 pt-1 pb-1 me-3">
-             <div class="container text-center mt-5">
+    <section class="jumbotron jumbotron-fluid text-center bg-secondary fw-bold text-dark p-5 text-sm-start vh-100 ">
+        <div class="container">
+            <div class="container text-center fw-bold display-4 pl-5">
                 <h3>
-                    <span class="text-white fw-bold p-5">About Me</span>
-                    </h3>
-                    </div>
-            <div class="container">
-                <div class="d-sm-flex align-items-center justify-content-between mt-5">
+                    <span class="text-white fw-bold">Talk to Me</span>
+                </h3>
 
-                   
-                    <div>
-                        <h4>Hello, Welcome</h4>
-                        <p class="text-white fs-3 fw-bold lead"><span class="text-primary">I'm Atusasiire Daren Cared</span></p>
-                        <p>
-                            <br>I'm a passionate Web designer and developer based in Kampala-Uganda.<br>
-                            I create clean and user friendly websites using HTML, CSS and Bootstrap.<br> I love turning
-                            ideas into
-                            responsive designs that work across all devices.<br> I enjoy solving problems, collaborating
-                            with others, and continuously
-                            learning.
-
-                        </p>
-                    </div>
-                    <img class="img-fluid w-25" src="/images/Daren Cared.png" alt="image">
+            </div>
+            <div class="d-md-flex align-items-center justify-content-between d-sm-flex pt-5">
+                <div>
+                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
+                            want to say hi?<br> I'd
+                            love to hear from you.</span></p>
+                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>:
+                        0770987258</a>
                 </div>
+
+
+                <form class="col g-3 needs-validation" novalidate>
+                    <div class="container form-sm-start">
+                        <div class="">
+                            <div class="mb-3 form-control-input">
+                                <label for="exampleFormControlInput-w-50%" class="form-label"> Your Name</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Your Email</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                            <div class="col-12">
+                                <a href="mailto:atusasiiredarencared58@gmail.com" class="btn btn-primary">
+                                    Send
+                                </a>
+                            </div>
+                </form>
             </div>
         </div>
         </div>
-        </div>
-        </section>
+    </section>
 
 
     <!-- Footer section -->
@@ -108,7 +120,7 @@
                     <a href="/projects.html">Projects</a>
                 </div>
 
-                 <div>
+                <div>
                     <a href="/resume.html">Resume</a>
                 </div>
 
@@ -178,11 +190,13 @@
             </div>
         </div>
 
-          <div class="container text-center mt-2">
-                    <p class="lead">
-                        Copyright &copy; 2025 Atuasiire Daren Cared
-                    </p>
-                </div>
+        <div class="container text-center mt-2">
+            <p class="lead">
+                Copyright &copy; 2025 Atuasiire Daren Cared
+            </p>
+        </div>
+
+
 
 
 
