--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,6 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-
 </head>
 
 <body>
@@ -35,19 +34,19 @@
                         <a class="nav-link active text-white" aria-current="page" href="/Index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/Pages/about.html">About</a>
+                        <a class="nav-link text-white" href="/about.html">About</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/Pages/projects.html">Projects</a>
+                        <a class="nav-link text-white" href="/projects.html">Projects</a>
                     </li>
 
                     <li>
-                        <a class="nav-link text-white" href="/Pages/Resume.html">Resume</a>
+                        <a class="nav-link text-white" href="/Resume.html">Resume</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="/Pages/contact.html">Contact Me</a>
+                        <a class="nav-link text-white" href="/contact.html">Contact Me</a>
                     </li>
                 </ul>
 
@@ -56,49 +55,82 @@
     </nav>
 
 
-    <section class="jumbotron jumbotron-fluid text-center bg-secondary fw-bold text-dark p-5 text-sm-start vh-100 ">
-        <div class="container">
-            <div class="container text-center fw-bold display-4 pl-5">
-                <h3>
-                    <span class="text-white fw-bold">Talk to Me</span>
-                </h3>
+    <!-- My Projects section -->
+    <section class="bg-secondary vh-100 p-5">
+        <div class="container text-center">
+            <h3>
+                <span class="text-white fw-bold m-5">My Projects</span>
+            </h3>
+        </div>
+        <div class="container mt-5">
+            <div class="row text-center align-items-center justify-content-center">
+                <div class="col-md">
+                    <div class="card w-75 bg-dark text-light mt-5">
+                        <div class="card-body text-center">
+                            <div>
+                                <img src="/images/BFSCHOOL.jpg" class="card-img-top bg-dark" alt="image">
+                                <div class="card-body bg-dark">
+                                    <h5 class="card-title"><span class="text-primary">School
+                                            Website</span></h5>
+                                    <p class="card-text">
+                                        I developed a school wbsite that provides easy access to school
+                                        details,
+                                        announcements,academic resources, and contact information
+                                    </p>
 
-            </div>
-            <div class="d-md-flex align-items-center justify-content-between d-sm-flex pt-5">
-                <div>
-                    <p class="lead my-4"><span class="fw-bold">Let's work together! Have a project in mind<br> or just
-                            want to say hi?<br> I'd
-                            love to hear from you.</span></p>
-                    <a href="#" class="link-custom text-white"><span class="text-dark fw-bold">Call</span>:
-                        0770987258</a>
+                                      <a href="BrightFutureSchool/BrightFutureSchool.html" class="btn btn-primary">
+                                    View Project
+                                </a>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
 
-                <form class="col g-3 needs-validation" novalidate>
-                    <div class="container form-sm-start">
-                        <div class="">
-                            <div class="mb-3 form-control-input">
-                                <label for="exampleFormControlInput-w-50%" class="form-label"> Your Name</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="name">
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleFormControlInput1" class="form-label">Your Email</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1"
-                                    placeholder="name@example.com">
-                            </div>
-                            <div class="mb-3">
-                                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-                            <div class="col-12">
-                                <a href="mailto:atusasiiredarencared58@gmail.com" class="btn btn-primary">
-                                    Send
+
+                <div class="col-md">
+                    <div class="card w-75 bg-dark text-light mt-5 h-60">
+                        <div class="card-body bg-dark text-center">
+                            <img src="/images/nexcld.jpg" class="card-img-top w-75" alt="image">
+                            <div class="card-body">
+                                <h5 class="card-title"><span class="text-primary">Nexcloud
+                                        Website</span></h5>
+                                <p class="card-text">
+                                    I designed and developed a professional website for an IT company to
+                                    showcase its services, contact channels it's location and portfolio
+                                </p>
+
+                                <a href="nex-cloud-project/index.html" class="btn btn-primary">
+                                    View Project
                                 </a>
                             </div>
-                </form>
+                        </div>
+                    </div>
+                </div>
+
+
+                       <div class="col-md">
+                    <div class="card w-75 bg-dark text-light mt-5 h-60">
+                        <div class="card-body bg-dark text-center">
+                            <img src="/images/portfolio.jpg" class="card-img-top w-75" alt="image">
+                            <div class="card-body">
+                                <h5 class="card-title"><span class="text-primary">My
+                                        Portfolio</span></h5>
+                                <p class="card-text">
+                                    I designed and developed a personal portfolio website show casing
+                                    my skills, projects i have worked on and the languages used
+                                </p>
+
+                                <a href="A.D CARED PORTFOLIO " class="btn btn-primary">
+                                    View Project
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
@@ -113,19 +145,19 @@
                 </div>
 
                 <div>
-                    <a href="/about.html">About</a>
+                    <a href="/Pages/about.html">About</a>
                 </div>
 
                 <div>
-                    <a href="/projects.html">Projects</a>
+                    <a href="/Pages/projects.html">Projects</a>
                 </div>
 
                 <div>
-                    <a href="/resume.html">Resume</a>
+                    <a href="/Pages/Resume.html">Resume</a>
                 </div>
 
                 <div>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/Pages/contact.html">Contact Me</a>
                 </div>
             </div>
 
