--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-         <img src="/images/logo.png" alt="logo" style="height:90px">
+         <img src="./images/logo.png" alt="logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -82,7 +82,7 @@
 
                         </p>
                     </div>
-                    <img class="img-fluid w-25" src="/images/Daren Cared.png" alt="image">
+                    <img class="img-fluid w-25" src="./images/Daren Cared.png" alt="image">
                 </div>
             </div>
         </div>
