--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg  navbar-light bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="about.html">
-                <img src="/images/logo.png" alt="logo" style="height:90px">
+                <img src="./images/logo.png" alt="Logo" style="height:90px">
 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
