--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="/images/careddd.jpg" alt="Image">
+                <img class="img-fluid w-25 img-thumbnail width-100 height-100 d-none d-sm-block" src="./images/careddd.jpg" alt="Image">
             </div>
         </div>
     </section>
