--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Hero section -->
-    <section
+    <section style="background-color: whitesmoke; color: dark;"
         class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-5 p-lg-0 pt-lg-5 text-sm-start vh-100">
         <div class="container mt-5">
             <div class="d-sm-flex align-items-center justify-content-between d-sm-flex pt-5">
@@ -97,9 +97,9 @@
     <section>
         <div class="container pt-5">
             <h4 class="text-center text-dark fw-bold ">My Services</h4>
-            <div class="row text-center">
+            <div class="row">
                 <div class="col-md">
-                    <div class="card-body text-center">
+                    <div class="card-body">
                         <div class="card" style="width: 18rem;">
                             <div style="background-color: whitesmoke; color: black;">
                                     <h5 class=" card-title"><span class="text-primary">
