--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 
     <!-- Hero section -->
-    <section style="background-color: whitesmoke; color: dark;"
+    <section style="background-color: whitesmoke; color: dark;">
         class="jumbotron jumbotron-fluid text-center bg-secondary text-white p-5 p-lg-0 pt-lg-5 text-sm-start vh-100">
         <div class="container mt-5">
             <div class="d-sm-flex align-items-center justify-content-between d-sm-flex pt-5">
