--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                     </p>
 
 
-                    <a href="projects.html" class="btn btn-primary">
+                    <a href="projects.html" class="btn btn-primary py-5">
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block"
+                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle"
                     src="./images/daren123.jpg" alt="Image">
             </div>
         </div>
