--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         Explore My Projects
                     </a>
                 </div>
-                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle style="width: 120px; height: 120px;"
+                <img class="img-fluid w-50 img-thumbnail width-100 height-50 d-none d-sm-block rounded-circle-shadow style="width: 120px; height: 120px;"
                     src="./images/daren123.jpg" alt="Image">
             </div>
         </div>
